== 14/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b41.zip V1.6b41]  ==

''' Tutundo '''

Fixed tutondo volume command code. Resolves ticket [ticket:606]

== 13/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b40.zip V1.6b40]  ==

''' Tutundo '''

Fixed tutondo volume scaling

== 12/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b39.zip V1.6b39]  ==

''' Scripting '''

Make messages from flash handled properly

''' M1 '''

Roll in updates

== 11/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b38.zip V1.6b38]  ==

''' Scripting '''

Ensure multiple script runs are handled correctly

''' M1 '''

Roll in updates

== 11/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b37.zip V1.6b37]  ==

''' Scripting '''

Simplified groovy scripting, ProcessDLT.groovy demonstrates these capabilities.

''' M1 '''

Roll in updates

== 5/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b36.zip V1.6b36]  ==

''' CBUS '''

Fixed issue with incorrect data type on sending to flash.

''' Scripting '''

Raised log level if running twice

== 5/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b35.zip V1.6bb35]  ==

''' CBUS '''

Fixed issue with incorrect data type when processing MMI messages from a Label device.


''' M1 '''

Updates to TALK

== 1/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b34.zip V1.6bb34]  ==

''' Scripting '''

Added a sendCommand method for no command only with no extra,extra2....  parameters


''' M1 '''

Updates for consistency 

== 1/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b33.zip V1.6bb33]  ==

''' Scripting '''

Updating scripting to only use the elife.sendCommand function. Removed first parameter of sendCommand call.

== 1/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b32.zip V1.6bb32]  [attachment:wiki:SoftwareReleases:eLife-1.6b32-libs.zip Libs-V1.6b32] ==

''' Scripting '''
