@@ -1,4 +1,4 @@
-#Wed Feb 14 11:19:24 EST 2007
+#Tue Feb 20 21:23:33 EST 2007
 major_version=1.6b
-minor_version=41
+minor_version=42
 app_name=eLife
